--- a/public/src/sass/estilo.css
+++ b/public/src/sass/estilo.css
@@ -27,164 +27,88 @@ body {
   }
 }
 
-.nav-menu {
-  position: absolute;
-  display: flex;
-  justify-content: space-evenly;
-  top: 0;
-  left: 0;
-  width: 100%;
+.nav-bar {
+  background-color: #321c3d;
   padding: 20px;
-  background-color: #fff;
-  /*Es el menú responsive. Utilizado hasta una resolución de 1279px*/
-  /*Resolución para resoluciones superiores a 2000px*/
-}
-@media only screen and (max-width: 1279px) {
-  .nav-menu {
-    padding: 0;
-  }
-}
-@media only screen and (min-width: 2000px) {
-  .nav-menu {
-    width: 80%;
-  }
-}
-.nav-menu .logo {
-  width: 150px;
-  /*Es el menú responsive. Utilizado hasta una resolución de 1279px*/
-  /*Resolución para resoluciones superiores a 2000px*/
-}
-@media only screen and (max-width: 1279px) {
-  .nav-menu .logo {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    z-index: 1;
-  }
-}
-@media only screen and (min-width: 2000px) {
-  .nav-menu .logo {
-    margin-left: 500px;
-  }
-}
-.nav-menu .logo img {
-  width: 100%;
-}
-.nav-menu .menu-horizontal {
   display: flex;
   align-items: center;
-  /*Es el menú responsive. Utilizado hasta una resolución de 1279px*/
-}
-@media only screen and (max-width: 1279px) {
-  .nav-menu .menu-horizontal {
-    position: absolute;
-    flex-direction: column;
-    justify-content: center;
-    width: 100%;
-    height: 110vh;
-    background: #000000;
-    left: -100%;
-    transition: all 0.1s;
-  }
-  .nav-menu .menu-horizontal.show {
-    left: 0;
-  }
-}
-.nav-menu .menu-horizontal li {
-  /*Es el menú responsive. Utilizado hasta una resolución de 1279px*/
-}
-@media only screen and (max-width: 1279px) {
-  .nav-menu .menu-horizontal li {
-    margin: 10px 0;
-    line-height: 30px;
-  }
-}
-.nav-menu .menu-horizontal li a {
-  padding: 20px;
-  color: black;
-  letter-spacing: 1px;
-}
-.nav-menu .menu-horizontal li:hover {
-  background-color: #fff;
-  border-radius: 6px;
-}
-.nav-menu .menu-horizontal li:hover a {
-  color: #000000;
-  font-weight: bold;
-}
-.nav-menu .menu-horizontal li:nth-child(5) {
-  background-color: #fff;
-  border-radius: 6px;
-  padding: 10px;
-}
-.nav-menu .menu-horizontal li:nth-child(5) a {
-  color: #000000;
-}
-.nav-menu .menu-horizontal li:nth-child(5):hover {
-  transform: scale(1.15);
-}
-.nav-menu .menu-vertical {
-  position: absolute;
-  display: none;
-}
-.nav-menu .checkbtn {
-  color: black;
-  top: 50px;
-  right: 30px;
-  font-size: 50px;
-  position: absolute;
+  justify-content: space-between;
+  color: #fff;
   cursor: pointer;
-  display: none;
-  /*Es el menú responsive. Utilizado hasta una resolución de 1279px*/
+  font-size: 1.5em;
+  width: 100%;
 }
-@media only screen and (max-width: 1279px) {
-  .nav-menu .checkbtn {
-    display: block;
-  }
+.nav-bar .logo {
+  width: 150px;
+}
+.nav-bar .logo img {
+  width: 100%;
 }
 
-header {
+.menu {
+  background-color: #321c3d;
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  margin-left: -100%;
+}
+.menu .menu-link {
+  display: block;
+  padding: 30px;
+  color: #fff;
+  font-size: 1.2em;
+}
+.menu .submenu {
+  height: 0;
+  overflow: hidden;
+  transition: all 0.3s;
+}
+.menu .submenu .menu-link {
+  background-color: #1d0e24;
+  padding-left: 40px;
+}
+
+.inicio {
   height: 50vh;
-  background-image: linear-gradient(rgb(50, 28, 61), rgba(0, 0, 0, 0.4)), url(http://localhost/PROYECTO_ZESARI/public/src/img/IMG-20230514-WA0019.jpg);
+  background-image: linear-gradient(rgb(50, 28, 61), rgba(0, 0, 0, 0.7)), url(http://localhost/PROYECTO_ZESARI/public/src/img/IMG-20230514-WA0019.jpg);
   background-position: bottom;
   background-size: cover;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 100px;
   /*Es la resolución maxima para un movil */
   /*Es la resolución que abarca el tamaño de una tablet y ordenador mediano*/
   /*Resolución para resoluciones superiores a 2000px*/
 }
 @media only screen and (max-width: 767px) {
-  header {
+  .inicio {
     height: 120vh;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1440px) {
-  header {
+  .inicio {
     height: 100vh;
   }
 }
 @media only screen and (min-width: 2000px) {
-  header {
+  .inicio {
     height: 70vh;
   }
 }
-header .header-contenido {
+.inicio .header-contenido {
   color: #fff;
   text-align: center;
   width: 50%;
   margin-top: 100px; /*Es la resolución maxima para un movil */
 }
 @media only screen and (max-width: 767px) {
-  header .header-contenido {
+  .inicio .header-contenido {
     width: 80%;
     margin-top: 150px;
   }
 }
-header .header-contenido p {
+.inicio .header-contenido p {
   padding: 20px;
   line-height: 50px;
   color: #fff;
@@ -193,22 +117,22 @@ header .header-contenido p {
   /*Es la resolución que abarca el tamaño de una tablet y ordenador mediano*/
 }
 @media only screen and (max-width: 767px) {
-  header .header-contenido p {
+  .inicio .header-contenido p {
     font-size: 15px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1440px) {
-  header .header-contenido p {
+  .inicio .header-contenido p {
     font-size: 20px;
   }
 }
-header .header-contenido h1 {
+.inicio .header-contenido h1 {
   text-transform: uppercase;
   letter-spacing: 5px;
   word-spacing: 0.25em;
   padding: 10px;
 }
-header .header-contenido a {
+.inicio .header-contenido a {
   color: #fff;
   letter-spacing: 1px;
   border: 1px rgb(255, 255, 255) solid;
@@ -217,12 +141,170 @@ header .header-contenido a {
   /*Es la resolución que abarca el tamaño de una tablet y ordenador mediano*/
 }
 @media only screen and (max-width: 767px) {
-  header .header-contenido a {
+  .inicio .header-contenido a {
     font-size: 15px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 1440px) {
-  header .header-contenido a {
+  .inicio .header-contenido a {
     font-size: 20px;
   }
+}
+
+.pie {
+  background-color: #000000;
+  height: 250px;
+  color: #fff;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  text-align: center;
+  /*Es la resolución maxima para un movil */
+}
+@media only screen and (max-width: 767px) {
+  .pie {
+    flex-direction: column;
+    height: 1000px;
+  }
+}
+.pie h1 {
+  letter-spacing: 5px;
+}
+.pie ul {
+  padding: 15px;
+  display: flex;
+  flex-direction: column;
+}
+.pie ul li {
+  line-height: 25px;
+}
+.pie ul li a {
+  color: #fff;
+}
+.pie #redes {
+  /*Es la resolución maxima para un movil */
+}
+.pie #redes ul {
+  color: #fff;
+  justify-content: space-evenly;
+  flex-direction: row;
+}
+@media only screen and (max-width: 767px) {
+  .pie #redes {
+    /*El contenedor de redes pasa a primer lugar*/
+    order: -1;
+  }
+}
+
+main {
+  /*Es la resolución maxima para un movil */
+}
+@media only screen and (max-width: 767px) {
+  main {
+    flex-direction: column;
+    height: 490px;
+  }
+}
+main section {
+  margin: 100px;
+}
+main .principios {
+  display: flex;
+  padding: 10px;
+}
+main .principios .caja {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+  margin: 20px;
+  background-color: #fff;
+  cursor: default;
+  border: 1px rgb(0, 0, 0) solid;
+  padding: 5px;
+}
+main .principios .caja .image {
+  height: 100px;
+}
+main .principios .caja .image picture {
+  display: flex;
+  justify-content: center;
+  border-color: 1px rgb(0, 0, 0) solid;
+}
+main .principios .caja .image picture img {
+  width: 30%;
+  border-radius: 10px;
+}
+main .principios .caja .contenido {
+  text-align: center;
+  padding: 15px;
+  height: 200px;
+}
+main .principios .caja .contenido p {
+  padding: 10px;
+}
+main .clases {
+  display: grid;
+  padding: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+main .clases .clase {
+  width: 90%;
+  margin: 20px;
+  overflow: hidden;
+  background-color: #fff;
+  cursor: default;
+  border: 1px rgb(0, 0, 0) solid;
+  transition: all 400ms ease;
+}
+main .clases .clase .image img {
+  width: 100%;
+}
+main .clases .clase .contenido {
+  text-align: center;
+  padding: 15px;
+}
+main .clases .clase .contenido a {
+  border: 1px rgb(0, 0, 0) solid;
+  padding: 5px;
+  color: #000000;
+}
+main .clases .clase .contenido p {
+  padding: 20px;
+  letter-spacing: 1px;
+}
+
+.imagen_scroll {
+  margin-top: 100px;
+  background-image: url(../img/fondoScroll.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 20em;
+  /*Resolución para resoluciones superiores a 2000px*/
+}
+@media only screen and (min-width: 2000px) {
+  .imagen_scroll {
+    height: 500px;
+  }
+}
+
+.contenedor-login {
+  width: 500px;
+  display: flex;
+  justify-content: space-around;
+  text-align: center;
+  flex-direction: column;
+  height: 400px;
+  margin: 200px auto;
+  border: 1px rgb(0, 0, 0) solid;
+  border-radius: 10%;
+}
+
+.crud {
+  margin: 100px auto;
+}
+
+.crear {
+  margin: 200px auto;
 }/*# sourceMappingURL=estilo.css.map */
