--- a/public/src/sass/estilo.scss
+++ b/public/src/sass/estilo.scss
@@ -4,11 +4,16 @@
 @import "layout/body";
 @import "layout/nav";
 @import "layout/header";
-// @import "layout/footer";
-// @import "layout/main";
+@import "layout/footer";
+@import "layout/main";
 
 // @import "componentes/carrousel";
-// @import "componentes/scroll";
+@import "componentes/scroll";
+
+
+@import "layout/formularioLogin";
+@import "layout/crud";
+@import "layout/crear";
 
 
 
