--- a/public/src/sass/layout/_header.scss
+++ b/public/src/sass/layout/_header.scss
@@ -1,15 +1,15 @@
 
-header {
+.inicio {
     height: 50vh;
     // background-color: #321c3d;
-    background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.40)), url(http://localhost/PROYECTO_ZESARI/public/src/img/IMG-20230514-WA0019.jpg);
+    background-image: linear-gradient(rgba(50,28,61), rgba(0, 0, 0, 0.70)), url(http://localhost/PROYECTO_ZESARI/public/src/img/IMG-20230514-WA0019.jpg);
     background-position: bottom;
     background-size: cover;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 100px;
+    // margin-top: 100px;
 
     @include movil-max(movil-max) {
         height: 120vh;
