--- a/public/src/sass/layout/_nav.scss
+++ b/public/src/sass/layout/_nav.scss
@@ -1,117 +1,212 @@
-.nav-menu {
-    position: absolute;
-    display: flex;
-    justify-content: space-evenly;
-    top: 0;
-    left: 0;
-    width: 100%;
+// .nav-menu {
+//     position: absolute;
+//     display: flex;
+//     justify-content: space-evenly;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     padding: 10px;
+//     background-color: rgba(50,28,61);
+
+
+//     @include menu-nav-tablet(nav-menu) {
+//         padding: 0;
+//     }
+
+//     @include ordenador-4k(ordenador-4k) {
+//         width: 80%;
+//     }
+
+//     .logo {
+//         width: 150px;
+//         img {
+//             width: 100%;
+//         }
+
+
+//         @include menu-nav-tablet(nav-menu) {
+//             position: absolute;
+//             top: 30px;
+//             left: 30px;
+//             z-index: 1;
+//         }
+
+//         @include ordenador-4k(ordenador-4k) {
+//             margin-left: 500px;
+//         }
+
+
+
+//     }
+
+//     .menu-horizontal {
+//         display: flex;
+//         justify-content: flex-end;
+//         align-items: center;
+//         width: 80%;
+
+
+
+//         @include menu-nav-tablet(nav-menu) {
+//             position: absolute;
+//             flex-direction: column;
+//             justify-content: center;
+//             width: 100%;
+//             height: 110vh;
+//             background: $negro;
+//             left: -100%;
+//             transition: all .10s;
+
+//             &.show {
+//                 left: 0;
+//             }
+//         }
+
+//         .menu-item {
+//             // display: inline-block;
+//             position: relative;
+//             padding: 20px;
+
+
+//             // @include menu-nav-tablet(nav-menu) {
+//             //     margin: 10px 0;
+//             //     line-height: 30px;
+//             // }
+
+//             a {
+//                 color: #fff;
+//                 letter-spacing: 1px;
+//             }
+
+//             &:hover {
+//                 border-radius: 6px;
+//                 a {
+//                     color: grey;
+//                     font-weight: bold;
+//                 }
+//             }
+
+//             &:hover > .menu-vertical {
+
+//                 display: block;
+//             }
+
+//             &:nth-child(5) {
+//                 background-color: $blanco;
+//                 border-radius: 6px;
+//                 margin-left: 100px;
+//                 // padding: 10px;
+
+//                 a {
+//                     color: $negro;
+//                 }
+
+//             }
+
+//             .menu-vertical {
+//                 position: absolute;
+//                 display: none;
+//                 right: 0;
+//                 background-color:  rgba(50,28,61);
+//                 width: 300px;
+//                 // margin: 45px;
+
+//                 li {
+//                     position: relative;
+//                     width: 100%;
+//                     color: #fff;
+//                     a {
+//                         background-color: antiquewhite;
+//                         color:  grey;
+//                         text-decoration: capitalize;
+//                     }
+
+//                     &:hover {
+//                         a {
+//                             color: #fff;
+//                             font-weight: bold;
+//                         }
+//                     }
+//                 }
+
+
+//             }
+//         }
+//     }
+
+
+
+//     .checkbtn {
+//         color:#fff ;
+//         top: 50px;
+//         right: 30px;
+//         font-size: 50px;
+//         position: absolute;
+//         cursor: pointer;
+//         display: none;
+
+//         @include menu-nav-tablet(nav-menu) {
+//             display: block;
+//         }
+
+//     }
+// }
+
+.nav-bar {
+    // right: 30px;
+    // position: absolute;
+    background-color: #321c3d;
     padding: 20px;
-    background-color: #fff;
-   
-
-    @include menu-nav-tablet(nav-menu) {
-        padding: 0;
-    }
-
-    @include ordenador-4k(ordenador-4k) {
-        width: 80%;
-    }
+    display: flex;
+   align-items: center;
+   justify-content: space-between;
+    color: #fff;
+    cursor: pointer;
+    font-size: 1.5em;
+    width: 100%;    
 
     .logo {
         width: 150px;
-
-        @include menu-nav-tablet(nav-menu) {
-            position: absolute;
-            top: 30px;
-            left: 30px;
-            z-index: 1;
-        }
-
-        @include ordenador-4k(ordenador-4k) {
-            margin-left: 500px;
-        }
-
+    
         img {
+
             width: 100%;
         }
-    }
-
-    .menu-horizontal {
-        display: flex;
-        align-items: center;
-
-        @include menu-nav-tablet(nav-menu) {
-            position: absolute;
-            flex-direction: column;
-            justify-content: center;
-            width: 100%;
-            height: 110vh;
-            background: $negro;
-            left: -100%;
-            transition: all .10s;
-
-            &.show {
-                left: 0;
-            }
-        }
-
-        li {
-            
-
-            @include menu-nav-tablet(nav-menu) {
-                margin: 10px 0;
-                line-height: 30px;
-            }
-
-            a {
-                padding: 20px;
-                color: black;
-                letter-spacing: 1px;
-            }
-
-            &:hover {
-                background-color: $blanco;
-                border-radius: 6px;
-                a {
-                    color: $negro;
-                    font-weight: bold;
-                }
-            }
-
-            &:nth-child(5) {
-                background-color: $blanco;
-                border-radius: 6px;
-                padding: 10px;
-
-                a {
-                    color: $negro;
-                }
-
-                &:hover {
-                    transform: scale(1.15);
-                }
-
-            }
-        }
-    }
-
-    .menu-vertical {
-        position: absolute;
-        display: none;
-    }
-
-    .checkbtn {
-        color: black;
-        top: 50px;
-        right: 30px;
-        font-size: 50px;
-        position: absolute;
-        cursor: pointer;
-        display: none;
-
-        @include menu-nav-tablet(nav-menu) {
-            display: block;
-        }
-
     }
 }
+
+
+// .menu, .submenu {
+//     padding: 0;
+//     margin: 0;
+
+// }
+
+
+.menu {
+    background-color: #321c3d;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    margin-left: -100%;
+
+    .menu-link {
+        display: block;
+        padding: 30px;
+        color: #fff;
+        font-size: 1.2em;
+    }
+
+    .submenu {
+        height: 0;
+        overflow: hidden;
+        transition: all 0.3s;
+        .menu-link {
+                background-color:#1d0e24 ;
+                padding-left: 40px;
+            }
+        }
+
+    
+}
+
