--- a/public/src/sass/estilo.scss
+++ b/public/src/sass/estilo.scss
@@ -6,12 +6,12 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/main";
-
-// @import "componentes/carrousel";
+@import "componentes/carrousel";
 @import "componentes/scroll";
 
 
 @import "layout/formularioLogin";
+@import "layout/formularioContacto";
 @import "layout/crud";
 @import "layout/crear";
 
