--- a/public/src/sass/layout/_footer.scss
+++ b/public/src/sass/layout/_footer.scss
@@ -1,45 +1,79 @@
 .pie {
-    background-color: $negro;
-    height: 250px;
+    background-color: #321c3d;
+    width: 100%;
+    height: 350px;
     color: $blanco;
     display: flex;
     justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
     text-align: center;
+    padding: 50px;
+
+    a{
+        color: #fff
+    }
 
     @include movil-max(movil-max) {
+        margin-top: 1100px;
         flex-direction: column;
-        height: 1000px;
+        height: 700px;
     }
 
-    h1 {
-        letter-spacing: $espaciadoH1;
-    }
-
-    ul {
-        padding: 15px;
+    .cajaArriba {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        width: 100%;
+        margin-top: 30px;
+
         li {
-            line-height: 25px;
-            a {
-                color: $blanco;
+            padding: 5px;
+           }
+        #logoFooter {
+            width: 50px;
+
+            img {
+                width: 100%;
             }
-        }
-
-    }
-
-    #redes {
-        ul {
-            color: $blanco;
-            justify-content: space-evenly;
-            flex-direction: row;
         }
 
         @include movil-max(movil-max) {
-                /*El contenedor de redes pasa a primer lugar*/
-                order: -1;
+            margin-top: 100px;
+            flex-direction: column;
+            
+        }
+    }
+
+
+    .cajaAbajo {
+        width: 60%;
+        margin-top: 30px;
+        // margin-right: 100px;
+        #redes {
+            ul {
+                display: flex;
+                align-items: center;
+                color: $blanco;
+                flex-direction: row;
+                justify-content: center;
+                text-align: center;
+                li {
+                    padding: 20px;
+                }
+                a {
+                    font-size: 30px;
+                }
             }
+
+            // @include movil-max(movil-max) {
+            //     /*El contenedor de redes pasa a primer lugar*/
+            //     order: -1;
+            // }
         }
 
+
     }
+
+}
