--- a/public/src/sass/layout/_main.scss
+++ b/public/src/sass/layout/_main.scss
@@ -8,77 +8,96 @@ main {
         }
         section {
             margin: 100px;
-        }
-
-        .principios {
             display: flex;
-          
-            padding: 10px;
-    
-            .caja {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+
+            h2 {
+                // text-transform: uppercase;
+                color:#D96704;
+                font-size: 40px;
+            }
+
+            h3 {
+                margin-bottom: 50px;
+                
+                
+            }
+            .principios {
                 display: flex;
-                flex-direction: column;
-                justify-content: center;
-                width: 100%;
-                margin: 20px;
-                background-color: $blanco;
-                cursor: default;
-                border: $bordeNegro;
-                padding: 5px;
-    
-                .image {
-                    height: 100px;
-                    
-                    picture {
-                        display: flex;
-                        justify-content: center;
-                        border-color: $bordeNegro;
-    
-                        img {
-                            width: 30%;
-                            border-radius:10px;
-                            
+                padding: 10px;
+        
+                .caja {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    width: 100%;
+                    margin: 20px;
+                    background-color: $blanco;
+                    // border: $bordeNegro;
+                    padding: 5px;
+        
+                    .image {
+                        height: 100px;
                         
+                        picture {
+                            display: flex;
+                            justify-content: center;
+                            border-color: $bordeNegro;
+        
+                            img {
+                                width: 30%;
+                                border-radius:10px;
+                                
+                            
+                            }
+                        }
+                       
+                    }
+                    
+        
+                    .contenido {
+                        text-align: center;
+                        padding: 15px;
+                        height: 200px;
+        
+                        h4 {
+                            color: #D96704;
+                        }
+                        p {
+                            padding: 10px;
+                            // letter-spacing: $espaciadoPA
                         }
                     }
-                   
-                }
-                
     
-                .contenido {
-                    text-align: center;
-                    padding: 15px;
-                    height: 200px;
-    
-                    p {
-                        padding: 10px;
-                        // letter-spacing: $espaciadoPA
-                    }
+                //     // MEDIA QUERIE MAIN
+                // @include movil-max(movil-max) {
+                //     width: 100%;
+                //     flex-direction: column;
+                //     height: 100%;
+                //     justify-content: center;
+                //     align-items: center;
+                //     text-align: center;
+        
+                //     .caja {
+                //         width: 70%;
+                //         height: 95%;
+                //     }
+                // }
+        
+        
+                // @include ordenador-4k(ordenador-4k) {
+                //     margin-top: 100px;
+        
+                // }
+        
                 }
+        }
+            
+        }
 
-            //     // MEDIA QUERIE MAIN
-            // @include movil-max(movil-max) {
-            //     width: 100%;
-            //     flex-direction: column;
-            //     height: 100%;
-            //     justify-content: center;
-            //     align-items: center;
-            //     text-align: center;
-    
-            //     .caja {
-            //         width: 70%;
-            //         height: 95%;
-            //     }
-            // }
-    
-    
-            // @include ordenador-4k(ordenador-4k) {
-            //     margin-top: 100px;
-    
-            // }
-    
-            }
-    }
+        
     
     
     .clases {
