--- a/public/src/sass/estilo.scss
+++ b/public/src/sass/estilo.scss
@@ -12,6 +12,7 @@
 
 @import "layout/formularioLogin";
 @import "layout/formularioContacto";
+@import "layout/formularioUsuario";
 @import "layout/crud";
 @import "layout/crear";
 @import "layout/sobreNosotros";
