--- a/public/src/sass/layout/_nav.scss
+++ b/public/src/sass/layout/_nav.scss
@@ -1,116 +1,110 @@
-.logo {
-    width: 100px;
-    display: inline-block;
-    position: absolute;
-    margin-left: 100px;
-    margin-top: -60px;
-    img {
-        width: 100%;
-    }
-}
-
-.nav-bar {
-    background-color: #321c3d;
-    color: #fff;
-    display: block;
-    padding: 20px;
-    cursor: pointer;
-    font-size: 1.5em;
-    width: 100%;
-}
-
-.menu , .submenu {
-    padding: 0;
-    margin: 0;
-}
-
-.menu {
-    background-color: #321c3d;
-    width: 100%;
-    margin-left: -100%;
-    position: absolute;
-    // height: 100vh;
-
-    // .menu-item {
-    //     display: flex;
-    //     align-items: center;
-    // }
-
-    .menu-link {
-        display: block;
-        padding: 10px;
-        color: #fff;
-        font: 1.2em;
-        
-
-       
-    }
-
-    .login {
-        background-color: #fff;
-        color: #1c1022;
-        width: 100px;
-        margin: 5px;
-        text-align: center;
-        
-    }
-}
-
-.submenu {
-    // height: 100vh;
-    overflow: hidden;
-    transition: all 0.3s;
-    .menu-link {
-        background-color: #1c1022;
-        padding-left: 40px;
-    }
-}
-
-.menu-link:hover {
-    color: grey;
-}
-
-.mostrar {
-    margin-left: 0;
-}
-
-
-@media(min-width:1024px) {
-    .nav-bar {
-        display: none;
-    }
-
+header {
     .logo {
         margin-top: 10px;
         z-index: 10000;
+        width: 100px;
+        display: inline-block;
+        position: fixed;
+        margin-left: 100px;
+
+        @include menu-nav-tablet(nav-menu) {
+            margin-top: -60px;
+            position: absolute;
+        }
+
+        img {
+            width: 100%;
+        }
     }
+
+    .nav-bar {
+        display: none;
+        padding: 20px;
+        cursor: pointer;
+        font-size: 1.5em;
+        width: 100%;
+        background-color: #321c3d;
+        color: #fff;
+        z-index: 1000;
+
+        @include menu-nav-tablet(nav-menu) {
+            display: block;
+        }
+    }
+
 
     .menu {
         margin-left: 0;
         display: flex;
         width: 100%;
-        padding: 20px;
         justify-content: flex-end;
-       
+        background-color: #321c3d;
+        position: fixed;
+
+        @include menu-nav-tablet(nav-menu) {
+            display: block;
+            margin-left: -100%;
+            height: 100vh;
+
+        }
+
+        .menu-link {
+            display: block;
+            padding: 25px;
+            color: #fff;
+            font: 1.2em;
+            height: 100%;
+
+            &:hover {
+                color: grey;
+            }
+        }
+
+        .login {
+            background-color: #fff;
+            color: #1c1022;
+            width: 100px;
+            margin: 5px;
+            text-align: center;
+
+        }
+
+        .container-submenu { // li desplegable
+            position: relative;
+
+            .submenu { //ul desplegable
+                position: absolute;
+                // top: 60px;
+                width: 200px;
+                overflow: visible;
+                z-index: 1000;
+                opacity: 0;
+                visibility: hidden;
+
+                @include menu-nav-tablet(nav-menu) {
+                    overflow: hidden;
+                    transition: all 0.3s;
+
+                }
+
+                .menu-link {
+                    background-color: #1c1022;
+                    padding-left: 40px;
+
+                }
+            }
+
+            &:hover .submenu {
+                opacity: 1;
+                visibility: visible;
+
+            }
+
+            
+        }
     }
 
-    .container-submenu {
-        position: relative;
-    }
-    .submenu {
-        position: absolute;
-        top: 60px;
-        width: 200px;
-        overflow: visible;
-        z-index: 1000;
-        opacity: 0;
-        visibility: hidden;
-    }
-
-    .container-submenu:hover .submenu {
-
-        opacity: 1;
-        visibility: visible;
-
+    .mostrar {
+        margin-left: 0;
     }
 }
