--- a/public/src/sass/layout/_sobreNosotros.scss
+++ b/public/src/sass/layout/_sobreNosotros.scss
@@ -1,3 +1,11 @@
+.imagen-fondo {
+    .titulo {
+        margin-top: 10%;
+        background-color: #321c3d;
+        height: 100px;
+    }
+}
+
 #sobreNosotros {
     display: flex;
     flex-direction: column;
