--- a/public/src/sass/layout/_formularioUsuario.scss
+++ b/public/src/sass/layout/_formularioUsuario.scss
@@ -1,21 +1,22 @@
-#formularioUsuario {
-    height: 800px;
-    background-color: rgb(255, 0, 0);
-    form {
-        padding: 50px;
-        width: 700px;
-        background-color: aqua;
+// #formularioUsuario {
+//     height: 800px;
+//     background-color: rgb(255, 0, 0);
+//     form {
+//         padding: 50px;
+//         width: 700px;
+//         background-color: aqua;
 
-        fieldset {
-            display: flex;
-            padding: 40px;
-            // flex-direction: column;
-            border: 1px solid black;
+//         fieldset {
+//             display: flex;
+//             padding: 40px;
+//             // flex-direction: column;
+//             border: 1px solid black;
 
-            p{
-                display: flex;
-                flex-direction: column;
-            }
-        }
-    }
-}
+//             p{
+//                 display: flex;
+//                 flex-direction: column;
+//                 padding: 20px;
+//             }
+//         }
+//     }
+// }
