--- a/public/src/sass/layout/_nav.scss
+++ b/public/src/sass/layout/_nav.scss
@@ -32,28 +32,115 @@ header {
         }
     }
 
+    .icon {
+        cursor: pointer;
+        margin-top: 10px;
+        width: 100px;
+        display: inline-block;
+        position: fixed;
+        margin-left: 90%;
+
+        &:hover {
+            opacity: .7;
+        }
+
+        span {
+            background: #f00;
+            padding: 7px;
+            border-radius: 50%;
+            color: #fff;
+            vertical-align: top;
+            margin-left: -25px;
+        }
+
+        img {
+            display: inline-block;
+            width: 40px;
+            margin-top: 20px;
+        }
+
+        
+
+
+    }
+
+    .notifi-box {
+        width: 300px;
+        height: 0px;
+        // opacity: 0;
+        position: absolute;
+        top: 63px;
+        right: 35px;
+        visibility: hidden;
+        // transition: 1s opacity, 250ms height;
+        // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
+        h2 {
+            font-size: 14px;
+            padding: 10px;
+            border-bottom: 1px solid #eee;
+            color: #999;
+
+            span {
+                color: #f00;
+            }
+        }
+
+        .notifi-item {
+            display: flex;
+            border-bottom: 1px solid #eee;
+            padding: 15px 5px;
+            margin-bottom: 15px;
+            cursor: pointer;
+
+            &:hover {
+                background-color: #eee;
+            }
+
+            img {
+                display: block;
+                width: 50px;
+                margin-right: 10px;
+                border-radius: 50%;
+            }
+
+            .text  {
+                h4{
+                color: #777;
+                font-size: 16px;
+                margin-top: 10px;
+            }
+            p {
+                color: #aaa;
+                font-size: 12px;
+            }
+            }
+        }
+    
+    }
+
 
     .menu {
         margin-left: 0;
         display: flex;
         width: 100%;
-        justify-content: flex-end;
+        justify-content: center;
         background-color: #321c3d;
         position: fixed;
 
         @include menu-nav-tablet(nav-menu) {
             display: block;
             margin-left: -100%;
-            height: 100vh;
+            
 
         }
 
         .menu-link {
-            display: block;
+            display: flex;
             padding: 25px;
             color: #fff;
-            font: 1.2em;
             height: 100%;
+            align-items: center;
 
             &:hover {
                 color: grey;
@@ -69,10 +156,25 @@ header {
 
         }
 
-        .container-submenu { // li desplegable
+        .container-submenu {
+            // li desplegable
             position: relative;
 
-            .submenu { //ul desplegable
+          
+                .icono-sub{
+                    width: 40px;
+                    padding: 10px;
+                    color: #fff;
+                }
+            .imagen-user {
+                width: 50px;
+                border-radius: 50%;
+            }
+            
+           
+            
+            .submenu {
+                //ul desplegable
                 position: absolute;
                 // top: 60px;
                 width: 200px;
@@ -90,6 +192,7 @@ header {
                 .menu-link {
                     background-color: #1c1022;
                     padding-left: 40px;
+                    
 
                 }
             }
@@ -100,7 +203,7 @@ header {
 
             }
 
-            
+
         }
     }
 
